编写发送邮件代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,11 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.nowcoder.community=debug
 #logging.file=C:/Users/memory/Desktop/community/community.log
+
+#MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=memory_tech@sina.com
+spring.mail.password=a66c1bf1c5e6444b
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
