用户注册和邮件激活模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.mail.username=memory_tech@sina.com
 spring.mail.password=a66c1bf1c5e6444b
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community
+community.path.domain=http:/localhost:8080
