--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.datasource.hikari.idle-timeout=30000
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
+# 实现数据库下划线字段与实体中的驼峰属性映射
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
