--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,9 @@ community.path.upload=C:/Users/memory/Desktop/java/pic
 spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
+
+#KafkaPropertities
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
