--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,8 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=test-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
+
+#ElasticsearchProperties
+spring.data.elasticsearch.cluster-name=nowcoder
+spring.data.elasticsearch.cluster-nodes=localhost:9300 
+# 9300是tcp访问端口，9200是http访问端口
