--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<version>2.9.2</version>
 		</dependency>
 		<!-- swagger end -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-quartz -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
 		<dependency>
